pyk/src/tests/unit/kore/test-data/definitions/pass/test-symbol-2.kore
[]

module TEST-SYMBOL-2

  sort S{} []

  symbol f{}(S{}) : S{} []

endmodule []
