pyk/src/tests/unit/kore/test-data/definitions/fail/test-exception-2.kore
[]

module TEST-EXCEPTION-2

  axiom{S}
    sort:S []

endmodule []
